# betfairmarketvolumesclient

./: .gitignore  README.md  history.rst  pyproject.toml  requirements.txt  setup.py
betfairmarketvolumesclient/: client.py  exceptions.py  utils.py
betfairmarketvolumesclient/resources/: __init__.py  baseresource.py  marketresource.py
examples/: download.py
tests/: conftest.py  utils.py
tests/unit/: test_client.py  test_utils.py
tests/unit/resource/: test_marketresource.py
